Encountered issue with skateboards not fitting inside 12 columns once pushed to github.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -271,8 +271,8 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap";
 
   img{
     width: 8vw;
-    padding-left: 1.2vw;
-    padding-right: 1.2vw;
+    // padding-left: 1.2vw;
+    // padding-right: 1.2vw;
   }
 }
 
